expose Hit data over HTTP API

--- a/.env
+++ b/.env
@@ -18,6 +18,6 @@ APP_ENV=dev
 APP_SECRET=be28c491de80910fb4f9e1c09ece1d62
 ###< symfony/framework-bundle ###
 ###> doctrine/mongodb-odm-bundle ###
-MONGODB_URL=mongodb://localhost:27017
-MONGODB_DB=symfony
+MONGODB_URL=mongodb://mongo:27017
+MONGODB_DB=heatmap
 ###< doctrine/mongodb-odm-bundle ###
