--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,7 +1,18 @@
 api_platform:
     mapping:
-        paths: ['%kernel.project_dir%/src/Entity']
+        paths: ['%kernel.project_dir%/src/Document']
     patch_formats:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    doctrine_mongodb_odm:
+        enabled: true
+    formats:
+        json:
+            mime_types: ['application/json']
+        html:
+            mime_types: ['text/html']
+    collection:
+        pagination:
+            enabled: false
+    show_webby: false
