--- a/config/packages/doctrine_mongodb.yaml
+++ b/config/packages/doctrine_mongodb.yaml
@@ -4,7 +4,9 @@ doctrine_mongodb:
     connections:
         default:
             server: '%env(resolve:MONGODB_URL)%'
-            options: {}
+            options:
+                password: rootpass
+                username: root
     default_database: '%env(resolve:MONGODB_DB)%'
     document_managers:
         default:
