--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,1 +1,18 @@
-version: '3'
+version: '3.6'
+services:
+    php:
+        build:
+            context: .
+            dockerfile: ./docker/php/Dockerfile
+        volumes:
+            - ./:/var/www/html
+        ports:
+            - 8080:8080
+    mongo:
+        restart: unless-stopped
+        image: mongo:4
+        ports:
+            - 27017:27017
+        environment:
+            - MONGO_INITDB_ROOT_USERNAME=root
+            - MONGO_INITDB_ROOT_PASSWORD=rootpass
