custom filter in order to list all customers with the same journey

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,5 +23,5 @@ services:
             - '../src/Kernel.php'
             - '../src/Tests/'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    App\DataPersister\CustomerJourneyDataPersister:
+        decorates: api_platform.doctrine_mongodb.odm.data_persister
